Fixed amount textbox alignment issue in send gift

--- a/src/SendGift/send-gift.scss
+++ b/src/SendGift/send-gift.scss
@@ -39,11 +39,11 @@
   .row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .gift-card-form {
-    max-width: 400px;
+    //max-width: 400px;
     z-index: 2;
   }
 
@@ -88,7 +88,8 @@
   .gift-card-form .form-item.gift-card-info {
     .form-group {
       input {
-        width: 90px;
+        width: 100px;
+        margin-right: 20px;
       }
     }
     .amounts {
@@ -109,7 +110,7 @@
           color: #000;
           position: absolute;
           top: 10px;
-          left: 20px;
+          left: 13px;
           pointer-events: none;
           // background-color: #000;
         }
@@ -117,13 +118,15 @@
           display: none;
         }
         &:last-child span {
-          display: none;
+          //display: none;
           position: absolute;
           top: 10px;
-          left: 20px;
+          left: 13px;
         }
         &:last-child input {
-          padding: 0 20px 0 20px;
+          padding: 0 30px 0 30px;
+          margin-right: 0;
+          text-align: center;
           &:focus {
             &::-webkit-input-placeholder {
               color: transparent;
@@ -140,7 +143,8 @@
       }
 
       input:-moz-read-only {
-        padding: 0 20px 0 30px;
+        padding: 0 30px 0 30px;
+        text-align: center;
         cursor: pointer;
         &:focus, &.focused {
           font-weight: bold;
@@ -148,7 +152,8 @@
       }
 
       input:read-only {
-        padding: 0 20px 0 30px;
+        padding: 0 30px 0 30px;
+        text-align: center;
         cursor: pointer;
         &:focus, &.focused {
           font-weight: bold;
@@ -158,6 +163,7 @@
   }
 
   .col {
+    width: 38%;
     .cm.s3 {
       margin-bottom: 30px;
       letter-spacing: 0.7px;
@@ -176,8 +182,9 @@
     }
     &:last-child {
       // position: sticky;
-      max-width: 500px;
-      right: 5.6%;
+      //max-width: 500px;
+      //right: 5.6%;
+      width: 46%;
       
       .how-to-gift {
         position: sticky;
@@ -224,6 +231,11 @@
     }
     .row {
       justify-content: space-around;
+        width: 100%;
+        .col:first-child {
+          width: 100%;
+        }
+
       // flex-direction: column;
       .col:last-child {
         display: none;
@@ -236,6 +248,17 @@
   #send-gift {
     .gift-card-form {
       width: 100%;
+
+      // .col:first-child {
+      //   width: 100%;
+      // }
+    }
+
+    .row {
+      width: 100%;
+      .col:first-child {
+        width: 100%;
+      }
     }
   }
 }
