--- a/src/components/gift-card/gift-card.scss
+++ b/src/components/gift-card/gift-card.scss
@@ -1,9 +1,10 @@
 .gift-card {
   position: relative;
-  width: 400px;
-  max-width: 100%;
-  height: 240px;
-  padding: 30px 30px 40px 30px;
+  //width: 400px;
+  //max-width: 100%;
+  width: 100%;
+  height: 280px;
+  padding: 35px 30px 35px 30px;
   display: inline-block;
   background-color: #000;
   border-radius: 12px;
@@ -31,7 +32,7 @@
 
   .price {
     text-align: left;
-    margin-top: 40px;
+    margin-top: 60px;
     color: #d1d2dd;
     span:first-child {
       font-family: 'Open Sans', sans-serif;
@@ -49,8 +50,8 @@
   .gift-logo {
     position: absolute;
     right: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 60%;
+    transform: translateY(-55%);
   }
 }
 
