--- a/src/landing/landing.scss
+++ b/src/landing/landing.scss
@@ -44,8 +44,18 @@
     text-align: right;
   }
 
-  .intro-container .col {
-    width: calc((100% - 6.5%)/2);
+  // .intro-container .col {
+  //   width: calc((100% - 6.5%)/2);
+  // }
+
+  .intro-container {
+    .col:first-child {
+      width: calc(100% - 6.5% - 38%)
+    }
+
+    .col:last-child {
+      width: calc(100% - 6.5% - 55.5%)
+    }
   }
 
   .brands {
@@ -195,7 +205,7 @@
     }
 
     .intro-container .col {
-      width: 100%;
+      width: 100% !important;
     }
 
     .intro-container .col:last-child {
